# esmfold-minimal

./: LICENSE  README.md  example.py  pyproject.toml
esmfold/: __init__.py  cli.py  esmfold.py  misc.py  pretrained.py  tri_self_attn_block.py  trunk.py
esmfold/esm/: data.py  multihead_attention.py  pretrained.py
esmfold/esm/model/: esm2.py
esmfold/openfold_local/data/: data_transforms.py
esmfold/openfold_local/model/: primitives.py  structure_module.py  triangular_attention.py  triangular_multiplicative_update.py
esmfold/openfold_local/np/: protein.py  residue_constants.py
esmfold/openfold_local/utils/: chunk_utils.py  feats.py  loss.py  rigid_utils.py  tensor_utils.py
esmfold/openfold_local/utils/geometry/: __init__.py  rigid_matrix_vector.py  rotation_matrix.py
